# feri-irawansyah

./: .env  .gitignore  Cargo.toml  Leptos.toml  README-SQLX.md  README.md
.sqlx/: query-066e1e3525d1f3b736e10ba994071e6bba939ef3dc44ad87c00a1754e81c65d3.json  query-09c2ba6aeda33ff0e7cef2f12b0a791ab25bbb36470ef6ce602c4f01bc5961db.json  query-0e73a1ce95f6c78781e2651daac51003a0f538f78717e8f0b65573bf55bb61c2.json  query-13dee047ca2fa1b94639845b499470a05e99b30688d324a83e0f55af80098204.json  query-1ba892dc4ab5dcff7ad514d6bb3e2014749136094f7e68b7ce004865520115d4.json  query-1cf271cbe950d0468bca516d5f88897d09c9e873578ab590199e11a47906d299.json  query-243980999223902e1e1bbbb8c33238d9f6fb176e2760e65ad2df875a5b194aa2.json  query-28d4354f5e00cc5af2f87591f7c7c5905d42cb7021e775ea137d516e05285d69.json  query-3a1bbccbbe9caf2e2a7641d3c34813255653a76d9279ae0114d863ec362ee6d5.json  query-47e43bf126429b3b74d47a70d3fdd79b837c05ae3fe2b41680186f37e531400d.json  query-4c236e8ca554cb1128fc8ebcf7d21f9b8ddfe858e907d3a74e78513baacb5e16.json  query-4f56bb399de110016fc34ee52cc74acafd8156c918da1c44c06c2e482fac1d88.json  query-53a1b5e25b66a2a29d61d8fcdbf83d9ac3ce4347ab8193795ef177bd8160466f.json  query-713209bae6da435ec4af0edfc57087ba0785033586a41ae90f9b049c79e0caa2.json  query-73674c18fc0e2fbb81747892ac48481afb3c7737e5282eb1cd4f3f64d9090ec9.json  query-7b7df429e99b2ed266e77bc79166e5a24afce04c6edb5fe26a4e33f10a55d810.json  query-9b2cd68bedab21220adf20eec2b1f1870893d4383009e4fe40bde5cdcc148d17.json  query-b3dd4eb5c43c23163b02580d72ce1ded2f8782e2dcc6197555cd099d37743e16.json  query-d0ec992cd3d38ccce18b1d42312a47bd00ef43cbd9f348987e16f585def3019d.json  query-d19a83f57e88fcdc5e2554e302cdd1c5d59557c3fcb6d017e3caaceec8499aef.json  query-d8bd8929c688055e8cd368b0759b1aadc173e39bf704ba5b42153681d389f95b.json  query-efc6653b374d8803d60925a13532f612bd7ca205e94e99d9cd73279d3dac09a8.json  query-f7f1c14a885a7a5cce082e3f047cf451b51c1d2415b7be68cc4ce35a247ce868.json
src/modules/: Cargo.toml
src/modules/src/: lib.rs
src/modules/src/certifications/: mod.rs
src/modules/src/contact/: mod.rs
src/modules/src/experiences/: mod.rs
src/modules/src/notes/: mod.rs
src/modules/src/portfolio/: mod.rs
src/modules/src/positions/: mod.rs
src/modules/src/profile/: mod.rs
src/modules/src/projects/: mod.rs
src/modules/src/skills/: mod.rs
src/repositories/: Cargo.toml
src/repositories/src/: database.rs  lib.rs
src/repositories/src/certifications/: cert_repository.rs
src/repositories/src/contact/: contact_repository.rs
src/repositories/src/experiences/: experience_repository.rs
src/repositories/src/notes/: note_repository.rs
src/repositories/src/portfolio/: portfolio_repository.rs
src/repositories/src/positions/: position_repository.rs
src/schemas/: Cargo.toml
src/schemas/migrations/: 20250101000000_init.sql  20260626151726_create_table_users.up.sql  20260626151746_create_table_positions.up.sql  20260626151757_create_table_portfolio.up.sql  20260626151805_create_table_experience.down.sql  20260626151805_create_table_experience.up.sql  20260626151825_create_table_auth_session.up.sql  20260626151836_create_table_certification.up.sql  20260626151845_create_table_notes.up.sql  20260626151851_create_table_skills.up.sql  20260627025258_add_initial_skill.down.sql  20260627025258_add_initial_skill.up.sql  20260627031713_add_initial_notes.down.sql  20260627031713_add_initial_notes.up.sql  20260627033830_add_initial_positions.down.sql  20260627033830_add_initial_positions.up.sql  20260627033951_add_initial_experience.down.sql  20260627033951_add_initial_experience.up.sql  20260627034055_add_initial_portfolio.down.sql  20260627034055_add_initial_portfolio.up.sql  20260627034154_add_initial_certification.down.sql  20260627034154_add_initial_certification.up.sql
src/schemas/src/: lib.rs
src/services/: Cargo.toml
src/services/src/: lib.rs
src/views/: Cargo.toml
src/views/src/: app.rs  lib.rs  main.rs  markdown.rs
src/views/src/components/: markdown.rs  mod.rs
src/views/src/pages/: experience.rs  home.rs  mod.rs  not_found.rs  notes.rs  portfolio.rs  projects.rs  skills.rs
src/views/style/: main.scss  tailwind.css
(+49 files in other folders)
