[workspace]
resolver = "3"

members = [
    "src/views",
    "src/modules",
    "src/repositories",
    "src/services",
    "src/schemas",
]

[profile.release]
codegen-units = 1
lto = true

# Required for wasm32 target — cargo-leptos sets this automatically
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
