[workspace]
resolver = "3"

members = [
    "src/views",
    "src/modules",
    "src/repositories",
    "src/services",
    "src/schemas",
]

[profile.release]
codegen-units = 1
lto = true

[[workspace.metadata.leptos]]
name = "feri-irawansyah"
bin-package = "views"
lib-package = "views"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "src/views/style/tailwind.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
