[package]
name = "views"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "views"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modules = { path = "../modules" }
repositories = { path = "../repositories", optional = true }
services = { path = "../services", optional = true }
schemas = { path = "../schemas", optional = true }

leptos = { version = "0.8.20", default-features = false }
leptos_actix = { version = "0.8.7", optional = true }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.14", default-features = false }

actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
pulldown-cmark = { version = "0.12", optional = true }
syntect = { version = "5", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

anyhow = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
dotenvy = { version = "0.15", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:getrandom",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_actix",
    "dep:actix-web",
    "dep:actix-files",
    "dep:repositories",
    "dep:services",
    "dep:schemas",
    "dep:dotenvy",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:pulldown-cmark",
    "dep:syntect",
    "dep:anyhow",
]
